# ult3edit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
conversions/TEMPLATE/: CHECKLIST.md  QUICKSTART.md  STORY_TEMPLATE.md  apply_template.sh
conversions/tools/: MUSIC_FORMAT.md  map_compiler.py  name_compiler.py  rebuild_test.py  shop_apply.py  tile_compiler.py  verify.py
conversions/voidborn/: MANUAL.md  VOIDBORN.md  apply.sh  build_disk.sh  encode_nametable.py
conversions/voidborn/sources/: engine_strings.json  engine_strings_full.json  shop_strings.json
engine/: .gitignore  SCENARIO_TEMPLATE.md  build.sh  scenario_build.sh  verify.py
engine/exod/: exod.s
engine/subs/: subs.s
engine/templates/: engine_strings.json
engine/tools/: source_patcher.py  string_catalog.py  string_patcher.py  ult3_strings.json
engine/ult3/: ult3.s
reference/: FILE_FORMATS.md
src/u3edit/: __init__.py  bestiary.py  cli.py  combat.py  constants.py  ddrw.py  diff.py  disk.py  equip.py  fileutil.py  map.py  patch.py  roster.py  save.py  shapes.py  sound.py  special.py  spell.py  text.py  tlk.py
src/u3edit/tui/: __init__.py  app.py  base.py  bestiary_editor.py  combat_editor.py  dialog_editor.py  editor_tab.py  form_editor.py  map_editor.py  party_editor.py  roster_editor.py  special_editor.py  text_editor.py  theme.py
src/ult3edit/: __init__.py  __main__.py  bcd.py  bestiary.py  cli.py  combat.py  constants.py  ddrw.py  diff.py  disk.py  equip.py  exod.py  fileutil.py  json_export.py  map.py  patch.py  roster.py  save.py  shapes.py  sound.py  special.py  spell.py  text.py  tlk.py
src/ult3edit/tui/: __init__.py  app.py  base.py  bestiary_editor.py  combat_editor.py  dialog_editor.py  editor_tab.py  form_editor.py  game_session.py  map_editor.py  roster_editor.py  search_tab.py  shapes_editor.py  special_editor.py  text_editor.py  theme.py
tests/: conftest.py  test_bcd.py  test_bestiary.py  test_cli.py  test_combat.py  test_constants.py  test_diff.py  test_disk.py  test_equip.py  test_exod_coverage.py  test_fileutil.py  test_form_editor.py  test_game_session.py  test_json_export.py  test_map.py  test_new_features.py  test_patch.py  test_roster.py  test_save.py  test_special.py  test_spell.py  test_text.py  test_tlk.py  test_tui_base.py  test_tui_combat.py  test_tui_map.py  test_tui_pure_logic.py  test_tui_text.py  test_tui_theme.py  test_unified_tabs.py
