[project]
name = "ult3edit"
version = "1.18.0"
description = "Ultima III: Exodus - Data file toolkit for Apple II archaeology"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Brad Hawthorne", email = "brad@hawthorne.net"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Software Development :: Disassemblers",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "pytest-cov>=4.0"]
tui = ["prompt_toolkit>=3.0"]

[project.scripts]
ult3edit = "ult3edit.cli:main"
ult3-roster = "ult3edit.roster:main"
ult3-bestiary = "ult3edit.bestiary:main"
ult3-map = "ult3edit.map:main"
ult3-tlk = "ult3edit.tlk:main"
ult3-combat = "ult3edit.combat:main"
ult3-save = "ult3edit.save:main"
ult3-special = "ult3edit.special:main"
ult3-text = "ult3edit.text:main"
ult3-spell = "ult3edit.spell:main"
ult3-equip = "ult3edit.equip:main"
ult3-disk = "ult3edit.disk:main"
ult3-shapes = "ult3edit.shapes:main"
ult3-sound = "ult3edit.sound:main"
ult3-patch = "ult3edit.patch:main"
ult3-ddrw = "ult3edit.ddrw:main"
ult3-diff = "ult3edit.diff:main"
ult3-exod = "ult3edit.exod:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ult3edit"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E702", "E741", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
